src/yini_test/cases/golden/strict/valid/inline-objects/colon-separator.strict.yini
@yini strict

^ Objects
cache = { enabled: true, maxMb: 256, ttlSec: 30 }

/END
