src/yini_test/cases/golden/strict/invalid/inline-objects/trailing-comma.strict.yini
@yini strict

^ Objects
cache = {
    enabled: true,
    maxMb: 256,
}

/END
